# Paraphrase_Generation

./: .gitignore  README.md  app1.py  app2.py  backend_generation_log.csv  bl_cross_train.py  config.py  evaluate_test.py  inference.py  inference1.py  inference2.py  main.py  main2.py  pyproject.toml  requirements.txt  run_all_experiments.sh  run_base_cross_att_no_neg.sh  run_base_cross_att_with_neg.sh  run_base_enc_dec_no_neg.sh  run_base_enc_dec_with_neg.sh  run_cross_att_no_neg.sh  run_cross_attn_with_neg.sh  run_enc_dec_no_neg.sh  run_enc_dec_with_neg.sh  run_pipeline.sh  sanskrit_results.csv  sanskrit_src_tokenizer.json  sanskrit_tgt_tokenizer.json  test_cross.py  test_ed.py  train.py  train_cross.py  train_cross_neg.py  train_crossbs_neg.py  train_ed.py  train_edB.py  train_edB_negBC.py  train_ed_neg.py  train_ed_output.py  tran_crossb.py
Frontend/: app.py  model_loader.py  new_app.py
NBaseline/: sanskrit_tokenizer_m4pro.json  train_cross.py  train_cross_neg.py
baseline/: train1_cross.py  train_cross.py  train_cross_neg.py  train_ed.py  train_ed_neg.py
config/: config.yaml
data/: dataset.py  dataset_neg.py
diffusion/: forward_process.py  reverse_process.py  reverse_process1.py  reverse_process2.py  scheduler.py
generated_results/: d3pm_cross_attention_results_20260302_222911.json  d3pm_cross_attention_results_20260306_100642.json  d3pm_cross_attention_results_20260306_100917.json  d3pm_cross_attention_results_20260306_113944.json  d3pm_cross_attention_results_20260307_165606.json  d3pm_cross_attention_results_20260307_173517.json  (+5 more)
inference/: app.py  (+5 more)
(+31 files in other folders)
